tests/negative/neg_own_anon_reassign.safe
-- Test: neg_own_anon_reassign
-- Description: Named access type declarations are removed in PR11.8e.
-- Expected: REJECT parser_error

package anonymous_reassign_test

   type data is record
      value : integer

   type data_ptr is access data
